<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/domain"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_raspisanie"
            android:icon="@drawable/calendar"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_skoro"
            android:icon="@drawable/preview"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_izbranoe"
            android:icon="@drawable/favorite"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_mesage"
            android:icon="@drawable/message"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_cineclub"
            android:icon="@drawable/comedy"
            android:title="@string/menu_cineclub" />
        <item
            android:id="@+id/nav_platinum"
            android:icon="@drawable/premium"
            android:title="@string/platinum" />
        <item
            android:id="@+id/nav_dolby"
            android:icon="@drawable/sound"
            android:title="@string/menu_dolby_atmos" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/contacts"
            android:icon="@drawable/baseline_perm_phone"
            android:title="@string/menu_contacts" />
    </group>
</menu>